	Unconditionally include time.h.

	* acinclude.m4: AC_PROG_LIBTOOL -> LT_INIT, AC_PROG_NM -> LT_PATH_NM
	* configure.ac: AC_PROG_LIBTOOL -> LT_INIT, AC_CHECK_LIBM -> LT_LIB_M,
	remove AC_TYPE_SIGNAL.
	* tests/misc.c, tests/spinner.c, tests/tests.h, tune/time.c:
	RETSIGTYPE -> void.

	* configure.ac: Remove redundant LT_INIT.
	Remove redundant backslash.
	Use AC_CONFIG_FILES.

2023-08-19  Marc Glisse  <marc.glisse@inria.fr>

	* doc/gmp.texi: Rename IEEE P754. Remove @refill.

2023-07-31  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/s390_64/z13: Further improve z13 asm code, adding	special code
	for z15.
	* mpn/s390_64/z13/gmp-mparam.h: Retune.

2023-07-30  Marc Glisse  <marc.glisse@inria.fr>

	Thanks to FX Coudert.
	* configure.ac: AC_FD_CC -> AS_MESSAGE_LOG_FD
	AC_HELP_STRING -> AS_HELP_STRING
	Update minimum autoconf version to 2.69.
	* acinclude.m4: AC_FD_CC -> AS_MESSAGE_LOG_FD

2023-07-29  Torbjörn Granlund  <tg@gmplib.org>

	* Version 6.3.0 released.

	* mpn/s390_64/z13/mul_basecase.asm: Rewrite, using new addmul_1.asm.

	* mpn/s390_64/z13/mul_1.asm: Rewrite.
	* mpn/s390_64/z13/addmul_1.asm: Likewise.
	* mpn/s390_64/z13/submul_1.asm: Likewise.

2023-07-27  Niels Möller  <nisse@lysator.liu.se>

	Update DIV_QR_1N_PI1_METHOD to use method 3 or 4.
	* mpn/arm64/applem1/gmp-mparam.h: Update DIV_QR_1N_PI1_METHOD.
	* mpn/arm64/cora57/gmp-mparam.h: Likewise.
	* mpn/arm64/xgene1/gmp-mparam.h: Likewise.
	* mpn/powerpc64/mode64/p7/gmp-mparam.h: Likewise.
	* mpn/powerpc64/mode64/p8/gmp-mparam.h: Likewise.
	* mpn/powerpc64/mode64/p9/gmp-mparam.h: Likewise.
	* mpn/sparc64/ultrasparct45/gmp-mparam.h: Likewise.
	* mpn/x86/coreihwl/gmp-mparam.h: Likewise.
	* mpn/x86/k7/gmp-mparam.h: Likewise.

2023-07-26  Niels Möller  <nisse@lysator.liu.se>

	* tune/speed.h (mpn_hgcd_appr_lehmer): Fix declaration to use
	correct return type.

2023-07-26  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/s390_64/z13/submul_1.asm: New file.
	* mpn/s390_64/z13/popcount.asm: New file.